--- a/style.css
+++ b/style.css
@@ -4,7 +4,14 @@
 }
 
 body {
-    background: url(https://telegraph-image-6hv.pages.dev/file/9a7bc58f6d7f89ea98a83.png) no-repeat center center;
+    background-image: url('https://telegraph-image-6hv.pages.dev/file/9a7bc58f6d7f89ea98a83.png');
+    background-size: cover;
+    /* 其他样式属性 */
+}
+
+
+body {
+    background: url(https://vkceyugu.cdn.bspapp.com/VKCEYUGU-dec470b0-fed6-46e5-be53-ec85fadc01be/b3997a29-3506-4fa5-9a54-57b967b1990a.webp) no-repeat center center;
     background-size: cover;
     height: 100vh;
 }
