--- a/style.css
+++ b/style.css
@@ -4,9 +4,8 @@
 }
 
 body {
-    background-image: url('https://telegraph-image-6hv.pages.dev/file/9a7bc58f6d7f89ea98a83.png');
+    background-image: url('background4.webp');
     background-size: cover;
-    /* 其他样式属性 */
 }
 
 
